Expanded generated member support